...
      </RelativeLayout>-->

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footerLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
...
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/wt_warrantytype"
                        style="@style/textSpinnerStyleHeading"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/warrantytype"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>
...
                    android:layout_marginTop="12dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/odometerreading"
                        style="@style/editTextStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:maxLength="12"
                        android:gravity="left|center_vertical"
...
                    android:layout_marginTop="12dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/price"
                        style="@style/editTextStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="12"
                        android:gravity="left|center_vertical"
                        android:imeOptions="actionNext"
...
                    android:layout_marginTop="12dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/cusName"
                        style="@style/editTextStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:imeOptions="actionNext"
                        android:inputType="text"
...
                    android:layout_marginTop="12dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/custMobileNumber"
                        style="@style/editTextStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:imeOptions="actionNext"
                        android:inputType="number"
...
                    android:layout_marginTop="12dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/custEmailAddress"
                        style="@style/editTextStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
...
                    android:layout_marginTop="12dp"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/custaddress"
                        style="@style/editTextStyle2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:singleLine="true"
                        android:imeOptions="actionNext"
...

                     >
                     />-->


                <com.gcloud.gaadi.ui.CustomMaterialAutoCompleteTxtVw
                    android:id="@+id/registrationCity"
                    style="@style/editTextStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/customer_city"
                    android:singleLine="true"
...
