<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!--<android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/active_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >-->


    <ListView
        android:id="@+id/certifiedcarslist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp">

    </ListView>

    <!--</android.support.v4.widget.SwipeRefreshLayout>-->


</RelativeLayout>