<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/filter_cancel"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.35"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="Cancel"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/apply_filter"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.65"
        android:background="@color/orange"
        android:gravity="center"
        android:text="Apply Filter"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>