<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/past_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/showallleads"
        android:divider="@android:color/transparent"
        android:dividerHeight="2dp" />

    <LinearLayout
        android:id="@+id/showallleads"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/no_corner_white_background"
        android:orientation="horizontal"
        android:padding="3dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/addLead"
            style="@style/gc_dark_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/show_all_leads"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>
    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
</RelativeLayout>